[package]
name = "mempool-api"
version = "0.2.2"
edition = "2021"
description = "A simple mempool API"
authors = ["utxo.one <rust@utxo.one>"]
license = "MIT"
repository = "https://github.com/utxo-one/mempool-api"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }